copied and pasted bunch of map api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,13 @@
 <head>
   <title>Backreact</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
+  <style>#map{height: 500px; width: 350px;}</style>
 </head>
 <body>
   <div id='container'>
 
   </div>
   <%= javascript_include_tag 'application' %>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 </body>
 </html>
