--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="//use.typekit.net/zqi4zrj.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
   <title>Backreact</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <style>#map{height: 500px; width: 350px;}</style>
