--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,9 +74,9 @@ img {
 	// max-width: 100%;
 }
 
-.welcome {
+p {
   font-family: "fira-sans-2", Trebuchet, sans-serif;
-  // font-style: italic;
+  font-style: italic;
   font-weight: 300;
   color: black;
   font-size: 3.9em;
