--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,13 +74,13 @@ img {
 	// max-width: 100%;
 }
 
-p {
+.welcome {
   font-family: "fira-sans-2", Trebuchet, sans-serif;
   font-style: italic;
-  font-weight: 300;
-  color: black;
+  font-weight: 600;
+  color: white;
   font-size: 3.9em;
-  background-color: #ce982b;
+  background-color: #9a0600;
   height: 35px;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -117,12 +117,28 @@ h1 {
 	line-height: 1.5;
 }
 
-span {
-	color: #ec1312;
+// span {
+// 	color: #ec1312;
 
-}
+// }
 
 .form1 {
-	margin-top: 200px;
-
+	height: 300px;
+	padding-top: 150px;
 }
+
+.formtext {
+
+	// width: 90%;
+	background-color: rgba(116, 27, 0, .7);
+	font-family: "fira-sans-2";
+	font-weight: 600;
+	font-size: 3em;
+	color: #fff;
+	padding: 16px;
+	border: 0;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 10px;
+	text-align: left;
+	}
