adding in background image asset url tag

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ p {
 }
 
 .background-img {
-	background: url(highway_1280adjLg.jpg);
+	background-image: asset-url("highway_1280adjLg.jpg");
 	background-position: -270px 0px;
   	background-repeat: no-repeat;
 	background-size: cover;
