--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,9 @@ $gutr-w: 1.754%;
 div:last-child {
   margin-right: 0;
 }
+.emailtext{
+	background-color:red;
+}
 
 
 body {
@@ -74,13 +77,13 @@ img {
 	// max-width: 100%;
 }
 
-p {
+.welcome {
   font-family: "fira-sans-2", Trebuchet, sans-serif;
   font-style: italic;
-  font-weight: 300;
-  color: black;
+  font-weight: 600;
+  color: white;
   font-size: 3.9em;
-  background-color: #ce982b;
+  background-color: #9a0600;
   height: 35px;
   padding-top: 25px;
   padding-bottom: 25px;
@@ -88,7 +91,7 @@ p {
 }
 
 .background-img {
-	background: url(highway_1280adjLg.jpg);
+	background-image: asset-url("highway_1280adjLg.jpg");
 	background-position: -270px 0px;
   	background-repeat: no-repeat;
 	background-size: cover;
@@ -98,7 +101,7 @@ p {
 
 h1 {
 	// font-style: normal;
-	color: #f2ecd4;	
+	color: #fefbe6;	
 	font-weight: 600;
 	font-size: 7.8em;
 	text-align: center;
@@ -115,14 +118,64 @@ h1 {
 	text-align: right;
 	margin: 10px 23% 0 10%;
 	line-height: 1.5;
+	padding-bottom: 180px;
+	font-style: italic;
 }
 
-span {
-	color: #ec1312;
+// span {
+// 	color: #ec1312;
 
-}
+// }
 
 .form1 {
-	margin-top: 200px;
+	height: 300px;
+	padding-top: 60px;
+}
+
+.formtext {
+	width: 90%;
+	background-color: rgba(83, 75, 70, .8);
+	// rgba(116, 27, 0, .8);
+	font-family: "fira-sans-2";
+	font-weight: 600;
+	font-size: 2.6em;
+	color: #fff;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 15px;
+	border: 0;
+	margin-left: 5%;
+	margin-right: 5%;
+	margin-bottom: 10px;
+	text-align: left;
+	}
+
+.login_rnd_btn {
+	margin-top: 20px;
+	border-radius: 35px;
+	border: 1px solid #fefbe6;
+	background-color: rgba(116, 27, 0, 1);
+	font-weight: 600;
+	width: 70px;
+	height: 70px;
+	font-family: "fira-sans-2";
+	font-size: 1.6em;
+	color: #fefbe6;
+	margin-left: 45%;
+	margin-right: 45%;
+}
+
+
+.not_member {
+	color: #f2ecd4;	
+	font-weight: 600;
+	font-size: 2.6em;
+	height: 10px;
+	// padding-top: 35px;
+	text-align: center;
+	margin: 10px 23% 0 10%;
+	line-height: 1.5;
+	padding-bottom: 180px;
+	font-style: italic;
 
 }
